--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,7 +15,9 @@ ZOHO_REFRESH_TOKEN="your_zoho_refresh_token"
 ZOHO_ACCOUNTS_URL="https://accounts.zoho.eu"
 ZOHO_API_DOMAIN="https://www.zohoapis.eu"
 
-# AI (OpenAI-compatible API for CSV mapping)
-AI_API_KEY="your_api_key"
-AI_API_URL="https://api.openai.com/v1/chat/completions"
-AI_MODEL="gpt-4o-mini"
+# Azure OpenAI (for AI-powered CSV column mapping)
+# Create a resource at https://portal.azure.com → Azure OpenAI
+AZURE_OPENAI_ENDPOINT="https://your-resource.openai.azure.com"
+AZURE_OPENAI_API_KEY="your_azure_openai_api_key"
+AZURE_OPENAI_DEPLOYMENT="gpt-4o-mini"
+AZURE_OPENAI_API_VERSION="2024-08-01-preview"
