Front End Deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Database (Azure PostgreSQL - Staging)
 # Note: % in password is URL-encoded as %25
-DATABASE_URL="postgresql://superbiauser:J03%252kG4rFaVL~c_6f@income-rec-postgres-staging.postgres.database.azure.com:5432/income_rec_staging?sslmode=require"
+DATABASE_URL="postgresql://incomerecadmin:M10%40dona123456@income-rec-tool-staging-db.postgres.database.azure.com:5432/income_rec_staging?sslmode=require"
 
 # Server
 PORT=3001
